move zillow image to top to prevent button overlap

--- a/static/css/info.css
+++ b/static/css/info.css
@@ -65,7 +65,7 @@
 
 .zillow-img {
     position: absolute;
-    bottom: 25px;
+    top: 25px;
     right: 0;
     width: 20%;
     min-width: 100px;
